--- a/src/scss/_objects.nav.scss
+++ b/src/scss/_objects.nav.scss
@@ -1,7 +1,7 @@
 nav.section-nav {
 	position: fixed;
 	top: 0;
-	width: 100%;
+	width: 100vw;
 	color: nth($brand-accent-colors, 1);
 	z-index: 10;
 	transition: transform 0.3s ease-out;
@@ -11,7 +11,7 @@ nav.section-nav {
 	}
 
 	&:not(.section-nav--active) {
-		transform: translateY(calc(-100% + 4px));
+		transform: translateY(calc(-100%));
 	}
 
 	.section-nav__container {
@@ -20,7 +20,7 @@ nav.section-nav {
 		background: #fff;
 
 		.logo-hpe {
-			width: 60%;
+			width: 50%;
 			padding: 15px;
 
 			img {
@@ -45,43 +45,16 @@ nav.section-nav {
 			display: flex;
 			justify-content: flex-end;
 			align-items: center;
-			width: 40%;
+			width: 50%;
 			padding: 13px 20px;
+			color: $text-color;
+			line-height: 1.2;
 
-			a.grommetux-anchor {
-				font-weight: 400;
-				font-size: 1rem;
-				color: #333;
-				svg { stroke: #333; }
-				transition: color 0.3s ease-in-out;
-
-				.grommetux-control-icon-share {
-					max-width: 18px;
-				}
-
-				&:hover {
-					text-decoration: none;
-					color: #000;
-
-					svg {
-						stroke: #000;
-
-						&.grommetux-control-icon-share {
-							transform: none;
-						}
-					}
-				}
+			svg {
+				fill: $brand-color;
+				stroke: $brand-color;
+				cursor: auto;
 			}
-		}
-
-		.section-nav__control-start {
-			font-weight: 600;
-			text-transform: uppercase;
-		}
-
-		.section-nav__control-next,
-		.section-nav__control-previous {
-			width: 25%;
 		}
 	}
 
