--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,215 +1,298 @@
 // (C) Copyright 2014-2015 Hewlett Packard Enterprise Development LP
 
 @import 'grommet/scss/hpe/index';
+@import 'settings.defaults';
 @import 'objects.meter';
 @import 'objects.nav';
+@import 'objects.illustration';
+@import 'objects.layer';
 
 .grommet.grommetux-app--inline,
 .grommetux-article {
-	// Allow for scroll monitoring.
-	overflow: visible;
+  // Allow for scroll monitoring.
+  overflow: visible;
 }
 
 .text-frame {
-	position: absolute;
-	top: 35%;
-	width: 80vw;
-	transform: translateY(-50%);
-	// Allow text to overlap illustration in some 
-	// instances without losing legibility.
-	background: rgba(255, 255, 255, 0.75);
-
-	@include media-query(lap-and-up) {
-		top: 40%;
-		transform: translateY(-50%);
-		width: 45vw;
-	}
-
-	h1 {
-		font-size: 2.75rem;
-		font-weight: 600;
-		padding: 5px 0;
-		margin: 0;
-		line-height: 1.1;
-
-		@include media-query(lap-and-up) {
-			font-size: 4rem;
-			margin: 0 20px 0 0;
-			line-height: 1;
-			flex-basis: 38%;
-		}
-	}
-
-	h3 {
-		max-width: 946px;
-		font-size: 1.25rem;
-		padding: 5px 0;
-		margin: 0;
-		line-height: 1.2;
-
-		@include media-query(lap-and-up) {
-			font-size: 1.5rem;
-	    //padding-top: 17px;
-    	line-height: 1.2;
-		}
-	}
-
-	.text-frame__row {
-		flex-wrap: wrap;
-
-		@include media-query(lap-and-up) {
-			flex-wrap: nowrap;
-		}
-	}
-
-	.grommetux-meter {
-		min-width: 125px;
-
-		@include media-query(lap-and-up) {
-			padding-right: 15px;
-		}
-	}
-
-	&.title-frame {
-		width: 100vw;
-		top: 100px;
-		transform: none;
-
-		@include media-query(lap-and-up) {
-			top: 33%;
-		}
-
-		h1 {
-			padding: 10px 20px;
-		}
-
-		h3 {
-			padding: 0 24px;
-			margin: 0;
-
-			@include media-query(lap-and-up) {
-				padding: 0;
-			}
-		}
-
-		.title-frame--border {
-			border: 8px nth($brand-accent-colors, 1) solid;
-			margin: 0 24px 24px;
-		}
-	}
-
-	.text-frame__desktop-header {
-		display: none;
-		padding-bottom: 20px;
-
-		@include media-query(lap-and-up) {
-			display: block;
-			min-width: 100vw;
-			margin-top: -60px;
-		}
-	}
-
-	.text-frame__title {
-		font-weight: 400;
-		padding-bottom: 20px;
-		font-size: 1.5rem;
-		margin-bottom: 0;
-		padding: 5px 0;
-
-		@include media-query(lap-and-up) {
-			font-weight: 600;
-			font-size: 2.4rem;
-			line-height: 1.1;
-		}
-	}
-}
-
-// Explicitly define grommet class here to override
-// Grommet's base image margins.
-.grommet .illustration {
-	// Setting min-width fixes Firefox svg scale bug.
-	width: 1100vw;
-	min-width: 1100vw;
-  height: auto;
-  max-height: 100vh;
-  margin: 0;
-  align-self: flex-end;
-  padding-bottom: 10px;
+  position: absolute;
+  top: 35%;
+  width: 80vw;
+  transform: translateY(-50%);
+  // Allow text to overlap illustration in some 
+  // instances without losing legibility.
+  background: rgba(255, 255, 255, 0.75);
+  z-index: 10;
 
   @include media-query(lap-and-up) {
-  	width: 600vw;
-  	min-width: 600vw;
-  	//margin: 0 0 24px;
+    top: 35%;
+    transform: translateY(-50%);
+    width: 45vw;
+    max-width: 750px;
+  }
+
+  @media (min-width: $desk-wide) {
+    top: 30%;
+  }
+
+  h1 {
+    font-size: 2.75rem;
+    font-weight: 600;
+    padding: 5px 0;
+    margin: 0;
+    line-height: 1.1;
+
+    @include media-query(lap-and-up) {
+      font-size: 4rem;
+      margin: 0 20px 0 0;
+      line-height: 1;
+      flex-basis: 39%;
+    }
+
+    @media (min-width: $desk-wide) {
+      font-size: 5rem;
+    }
+  }
+
+  h3 {
+    max-width: 946px;
+    font-size: 1.25rem;
+    padding: 5px 0;
+    margin: 0;
+    line-height: 1.2;
+
+    @include media-query(lap-and-up) {
+      font-size: 1.5rem;
+      //padding-top: 17px;
+      line-height: 1.2;
+    }
+
+    @media (min-width: $desk-wide) {
+      font-size: 2rem;
+    }
+  }
+
+  .text-frame__row {
+    flex-wrap: wrap;
+
+    @include media-query(lap-and-up) {
+      flex-wrap: nowrap;
+    }
+  }
+
+  .grommetux-meter {
+    min-width: 125px;
+
+    @include media-query(lap-and-up) {
+      padding-right: 15px;
+    }
+  }
+
+  &.title-frame {
+    width: 100vw;
+    top: 100px;
+    transform: none;
+    max-width: 100vw;
+    background: none;
+
+    @include media-query(lap-and-up) {
+      top: 30%;
+    }
+
+    @media (min-width: $desk-wide) {
+      top: 20%;
+    }
+
+    h1 {
+      padding: 10px 20px;
+      margin: 0;
+      // Allow text to overlap illustration in some 
+      // instances without losing legibility.
+      background: rgba(255, 255, 255, 0.75);
+
+      @media (min-width: $desk-wide) {
+        font-size: 5rem;
+      }
+    }
+
+    h3 {
+      padding: 0 24px;
+      margin: 0;
+      max-width: 1005px;
+      // Allow text to overlap illustration in some 
+      // instances without losing legibility.
+      background: rgba(255, 255, 255, 0.75);
+
+      @media (min-width: $desk-wide) {
+        max-width: 1284px;
+        font-size: 2rem;
+      }
+    }
+
+    .title-frame--border {
+      border: 8px nth($brand-accent-colors, 1) solid;
+      margin: 0 24px 24px;
+    }
+  }
+
+  .text-frame__desktop-header {
+    display: none;
+    padding-bottom: 20px;
+
+    @include media-query(lap-and-up) {
+      display: block;
+      min-width: 100vw;
+      margin-top: -60px;
+    }
+  }
+
+  .text-frame__title {
+    font-weight: 400;
+    padding-bottom: 20px;
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    padding: 5px 0;
+
+    @include media-query(lap-and-up) {
+      font-weight: 600;
+      font-size: 2.4rem;
+      line-height: 1.1;
+    }
+
+    @include media-query(lap-and-up) {
+      font-size: 3.4rem;
+    }
   }
 }
 
 section.end-frame-illustration {
-	width: 100vw;
-	min-height: 100vh;
-	height: 100%;
-	justify-content: flex-end;
+  width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+  max-height: 100%;
+  justify-content: flex-end;
+  z-index: 15;
 
-	@include media-query(lap-and-up) {
-  	width: 50vw;
+  @include media-query(lap-and-up) {
+    width: 50vw;
   }
 
-	img {
-		width: 100%;
-		height: auto;
-		margin: 0;
-		padding-bottom: 10px;
-	}
+  img {
+    width: 100%;
+    height: auto;
+    max-height: 100vh;
+    margin: 0;
+    padding-bottom: 30px;
+  }
 }
 
 .end-frame {
-	width: 100vw;
+  width: 100vw;
   min-height: 100vh;
   height: 100%;
   padding: 0 24px;
+  z-index: 15;
 
   .grommetux-heading {
-  	font-size: 2.1rem;
+    font-size: 2.1rem;
 
-  	@include media-query(lap-and-up) {
-  		font-size: 3rem;
-  	}
+    @include media-query(lap-and-up) {
+      font-size: 3rem;
+    }
+
+    @media (min-width: $desk-wide) {
+      font-size: 4.25rem;
+    }
   }
 
   a.grommetux-button.end-frame__button {
-  	margin: 20px 0;
+    margin: 20px 0;
+
+    @media (min-width: $desk-wide) {
+      font-size: 1.5rem;
+      padding: 10px 30px;
+    }
   }
 
   a.grommetux-anchor {
-  	display: flex;
-		font-weight: 400;
-		font-size: 1rem;
-		color: #333;
-		margin-top: 40px;
-		transition: color 0.3s ease-in-out;
+    display: flex;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #333;
+    margin-top: 40px;
+    transition: color 0.3s ease-in-out;
 
-		svg { stroke: #333; }
+    @media (min-width: $desk-wide) {
+      font-size: 1.5rem;
+      line-height: 1.2;
+    }
 
-		.grommetux-control-icon-share {
-			max-width: 18px;
-		}
+    svg {
+      stroke: #333;
+    }
 
-		&:hover {
-			text-decoration: none;
-			color: #000;
+    .grommetux-control-icon-share {
+      max-width: 18px;
 
-			svg {
-				stroke: #000;
+      @media (min-width: $desk-wide) {
+        max-width: 30px;
+        width: 30px;
+        height: 30px;
+      }
+    }
 
-				&.grommetux-control-icon-share {
-					transform: none;
-				}
-			}
-		}
-	}
+    &:hover {
+      text-decoration: none;
+      color: #000;
+
+      svg {
+        stroke: #000;
+
+        &.grommetux-control-icon-share {
+          transform: none;
+        }
+      }
+    }
+  }
+}
+
+.section-2 {
+  position: relative;
+  height: 100vh;
+  transition: background-color 0.75s ease-out;
+  z-index: 10;
+
+  .text-frame {
+    transition: background-color 0.75s ease-out, color 0.75s ease-out;
+  }
+
+  &.section-2--light {
+    background-color: #fff;
+  }
+  
+  &.section-2--dark {
+    background-color: nth($brand-accent-colors, 2);
+
+    .text-frame {
+      color: #fff;
+      background: rgba(97, 71, 103, 0.75);
+    }
+  }
+}
+
+article section {
+  position: relative;
+  height: 100vh;
+}
+// This is a hacky way of reducing the site height 
+// to counter the horizontal scroll bar/nav on iOS devices.
+.app-mobile {
+  article section {
+    height: calc(100vh - 70px);
+  }
 }
 
 #{$dark-background-context} {
   .end-frame__button {
-  	color: #fff;
+    color: #fff;
   }
 }
