--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,7 +15,7 @@
 
 .text-frame {
   position: absolute;
-  top: 35%;
+  top: 30%;
   width: 80vw;
   transform: translateY(-50%);
   // Allow text to overlap illustration in some 
@@ -166,7 +166,7 @@
 
 section.end-frame-illustration {
   width: 100vw;
-  min-height: 100vh;
+  //min-height: 100vh;
   height: 100%;
   max-height: 100%;
   justify-content: flex-end;
@@ -181,7 +181,7 @@ section.end-frame-illustration {
     height: auto;
     max-height: 100vh;
     margin: 0;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
 }
 
@@ -282,13 +282,22 @@ section.end-frame-illustration {
 article section {
   position: relative;
   height: 100vh;
+  min-height: 100vh;
 }
 
 // This is a hacky way of reducing the site height 
 // to counter the horizontal scroll bar/nav on iOS devices.
 .app-mobile {
+  height: calc(100vh - 70px);
+
   article section {
     height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
+  }
+
+  .end-frame {
+    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
   }
 }
 
