Adjusted Layer styles.
Fixed iOS layer positioning bug.

--- a/src/scss/_objects.layer.scss
+++ b/src/scss/_objects.layer.scss
@@ -1,9 +1,11 @@
 .grommet.grommetux-layer.grommetux-layer--flush {
   position: fixed;
   top: 0;
-  width: 100%;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, .5);
   height: 100vh;
 
   .grommetux-layer__container {
