--- a/src/scss/_objects.layer.scss
+++ b/src/scss/_objects.layer.scss
@@ -4,8 +4,8 @@
   right: 0;
   bottom: 0;
   width: 100vw;
-  z-index: 20;
-  background-color: rgba(0, 0, 0, .5);
+  z-index: 25;
+  background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
 
   .grommetux-layer__container {
