--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -134,7 +134,7 @@
       // Avoid horizontal scroll bar on iPhone5.
       @media (max-width: 320px) {
         font-size: 1.2rem;
-        line-height: 1.1
+        line-height: 1.1;
       }
     }
 
