--- a/src/scss/_objects.illustration2.scss
+++ b/src/scss/_objects.illustration2.scss
@@ -24,38 +24,38 @@
     width: 100%;
     align-self: flex-end;
 
-    .st0{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
-    .st1{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.041;}
-    .st2{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.355;}
-    .st3{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.2242;}
-    .st4{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.1942;}
-    .st5{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.2179;}
-    .st6{fill:none;stroke:#FFFFFF;stroke-width:3;stroke-linecap:square;stroke-miterlimit:10;}
-    .st7{fill:#FFFFFF;stroke:#614767;stroke-width:0.75;stroke-miterlimit:10;}
-    .st8{fill:#00AF86;stroke:#614767;stroke-width:0.75;stroke-miterlimit:10;}
-    .st9{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,6.9651;}
-    .st10{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.1503;}
-    .st11{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,6.9434;}
-    .st12{fill:none;stroke:#00B288;stroke-width:3;stroke-miterlimit:10;}
-    .st13{fill:none;stroke:#F69679;stroke-width:3;stroke-miterlimit:10;}
-    .st14{fill:none;stroke:#00B48D;stroke-width:3;stroke-miterlimit:10;}
-    .st15{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.0406;}
-    .st16{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.1176;}
-    .st17{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.0532;}
-    .st18{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.0853;}
-    .st19{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.0122;}
-    .st20{fill:none;stroke:#50C3CC;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:0,7.0654;}
+    .st0 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round;  }
+    .st1 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.041; }
+    .st2 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.355; }
+    .st3 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.2242; }
+    .st4 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.1942; }
+    .st5 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.2179; }
+    .st6 { fill: none; stroke: #FFFFFF; stroke-width: 3; stroke-linecap: square; stroke-miterlimit: 10;  }
+    .st7 { fill: #FFFFFF; stroke: #614767; stroke-width: 0.75; stroke-miterlimit: 10;  }
+    .st8 { fill: #00AF86; stroke: #614767; stroke-width: 0.75; stroke-miterlimit: 10;  }
+    .st9 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 6.9651; }
+    .st10 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.1503; }
+    .st11 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 6.9434; }
+    .st12 { fill: none; stroke: #00B288; stroke-width: 3; stroke-miterlimit: 10; }
+    .st13 { fill: none; stroke: #F69679; stroke-width: 3; stroke-miterlimit: 10; }
+    .st14 { fill: none; stroke: #00B48D; stroke-width: 3; stroke-miterlimit: 10; }
+    .st15 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.0406; }
+    .st16 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.1176; }
+    .st17 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.0532; }
+    .st18 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.0853; }
+    .st19 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.0122; }
+    .st20 { fill: none; stroke: #50C3CC; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; stroke-dasharray: 0, 7.0654; }
   
 
     .line__vertical {
       transform-origin: bottom;
       transform: scaleY(0);
-      transition: all .2s ease-out;
+      transition: all 0.2s ease-out;
     }
 
     .line__horizontal {
       transform: scaleX(0);
-      transition: all .2s ease-out;
+      transition: all 0.2s ease-out;
 
       &.line__horizontal--right {
         transform-origin: right;
@@ -70,7 +70,7 @@
       opacity: 0;
       transform: scale(0);
       transform-origin: center;
-      transition: all .25s ease-out;
+      transition: all 0.25s ease-out;
     }
   }
 
