--- a/src/scss/_objects.layer.scss
+++ b/src/scss/_objects.layer.scss
@@ -22,6 +22,7 @@
     	margin-bottom: 20px;
     	margin-top: 30px;
       transform: none;
+      max-width: 1000px;
 
     	&.grommetux-headline--large {
     		font-weight: 600;
