Added IE11 styles.

--- a/src/scss/_objects.illustration2.scss
+++ b/src/scss/_objects.illustration2.scss
@@ -50,19 +50,23 @@
     .line__vertical {
       transform-origin: bottom;
       transform: scaleY(0);
+      -ms-transform: scale(0,0);
       transition: all 0.2s ease-out;
     }
 
     .line__horizontal {
       transform: scaleX(0);
+      -ms-transform: scale(0,0);
       transition: all 0.2s ease-out;
 
       &.line__horizontal--right {
         transform-origin: right;
+        -ms-transform-origin: right;
       }
 
       &.line__horizontal--left {
         transform-origin: left;
+        -ms-transform-origin: left;
       }
     }
 
@@ -78,15 +82,18 @@
     .lines-1 {
       .line__vertical {
         transform: scaleY(1);
+        -ms-transform: scale(1,1);
       }
 
       .line__horizontal {
         transform: scaleX(1);
+        -ms-transform: scale(1,1);
       }
 
       .main-icon {
         opacity: 1;
         transform: scale(1);
+        -ms-transform: scale(1,1);
       }
     }
   }
@@ -95,15 +102,18 @@
     .lines-2 {
       .line__vertical {
         transform: scaleY(1);
+        -ms-transform: scale(1,1);
       }
 
       .line__horizontal {
         transform: scaleX(1);
+        -ms-transform: scale(1,1);
       }
 
       .main-icon {
         opacity: 1;
         transform: scale(1);
+        -ms-transform: scale(1,1);
       }
     }
   }
@@ -112,15 +122,18 @@
     .lines-3 {
       .line__vertical {
         transform: scaleY(1);
+        -ms-transform: scale(1,1);
       }
 
       .line__horizontal {
         transform: scaleX(1);
+        -ms-transform: scale(1,1);
       }
 
       .main-icon {
         opacity: 1;
         transform: scale(1);
+        -ms-transform: scale(1,1);
       }
     }
   }
