--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,10 @@
 @import 'objects.progress';
 @import 'objects.hotspot';
 
+html {
+  // Removes vertical scroll bar from Windows browsers.
+  overflow-y: hidden;
+}
 .grommetux-app {
   overflow: scroll;
   overflow-x: scroll;
