--- a/src/scss/_objects.illustration.scss
+++ b/src/scss/_objects.illustration.scss
@@ -8,10 +8,11 @@
   max-height: 100vh;
   margin: 0;
   align-self: flex-end;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  pointer-events: none;
 
   @include media-query(lap-and-up) {
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     width: 400vw;
     min-width: 400vw;
   }
@@ -43,21 +44,41 @@
 
   .illustration__hero {
     position: fixed;
-    width: 36vw;
+    width: 39vw;
     left: 50vw;
-    padding-bottom: 20px;
+    //padding-bottom: 20px;
 
     transform: translateX(-50%);
     opacity: 0;
     z-index: 2;
 
     @include media-query(lap-and-up) {
-      width: 16vw;
-      padding-bottom: 40px;
+      width: 18.5vw;
+      //padding-bottom: 40px;
     }
 
     &.illustration__hero--active {
       opacity: 1;
+    }
+  }
+
+  .illustration__hero-2 {
+    position: absolute;
+    left: 404vw;
+    width: 36vw;
+    transform: translateX(-50%);
+    z-index: 2;
+    bottom: 6px;
+
+    @include media-query(lap-and-up) {
+      width: 16vw;
+      //padding-bottom: 40px;
+      left: 180vw;
+    }
+
+    &.illustration__hero-2--active {
+      position: fixed;
+      left: 50vw;
     }
   }
 
