--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -57,7 +57,8 @@ html {
       font-size: 4rem;
       margin: 0 20px 0 0;
       line-height: 1;
-      flex-basis: 39%;
+      // Flex-basis does odd things in various browsers.
+      // flex-basis: 39%;
     }
 
     @media (min-width: $desk-wide) {
@@ -87,7 +88,7 @@ html {
     flex-wrap: wrap;
 
     @include media-query(lap-and-up) {
-      flex-wrap: nowrap;
+      //flex-wrap: nowrap;
     }
   }
 
