--- a/src/scss/_objects.layer.scss
+++ b/src/scss/_objects.layer.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
 		background-color: nth($brand-accent-colors, 1);
-		color: #fff;
+		color: nth($brand-grey-colors, 1);
     padding-top: 24px;
     padding-bottom: 24px;
 
@@ -34,7 +34,7 @@
     }
 
     .grommetux-layer__closer {
-    	svg { stroke: #fff; }
+    	svg { stroke: nth($brand-grey-colors, 1); }
     }
 
     img {
@@ -62,8 +62,8 @@
       }
 
       .grommetux-anchor__icon svg {
-        fill: #ffffff;
-        stroke: #ffffff;
+        fill: nth($brand-grey-colors, 1);
+        stroke: nth($brand-grey-colors, 1);
       }
     }
   }
