--- a/src/scss/_objects.illustration.scss
+++ b/src/scss/_objects.illustration.scss
@@ -46,7 +46,7 @@
     position: fixed;
     width: 42vw;
     left: 50vw;
-    bottom: 16px;
+    padding-bottom: 16px;
 
     transform: translateX(-50%);
     opacity: 0;
@@ -67,7 +67,7 @@
     width: 36vw;
     transform: translateX(-50%);
     z-index: 2;
-    bottom: 0;
+    padding-bottom: 8px;
 
     @include media-query(lap-and-up) {
       width: 16vw;
@@ -76,7 +76,7 @@
 
     &.illustration__hero-2--active {
       position: fixed;
-      left: 50vw;
+      left: 50%;
     }
   }
 
