--- a/src/scss/_objects.nav.scss
+++ b/src/scss/_objects.nav.scss
@@ -91,8 +91,9 @@ nav.section-nav {
     }
 
     .section-nav__control-start {
-      font-weight: 600;
-      text-transform: uppercase;
+      @include media-query(lap-and-up){
+        display: none;
+      }
     }
 
     .section-nav__control-next,
@@ -101,7 +102,7 @@ nav.section-nav {
     }
   }
 
-  @media(min-width: 500px) {
+  @include media-query(lap-and-up) {
     .section-nav__container {
       .logo-hpe {
         padding: 24px 48px;
